language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_internal.exp
error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_internal.move:13:10 ───
    │
 13 │         (X::s().f: u64);
    │          ^^^^^^^^ Invalid access of field 'f' on '0x1::X::S'. Fields can only be accessed inside the struct's module
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_internal.move:15:10 ───
    │
 15 │         (s.f: u64);
    │          ^^^ Invalid access of field 'f' on '0x1::X::S'. Fields can only be accessed inside the struct's module
    │

